--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,17 +2,25 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.pgsanchez.whereismymap">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
+        android:name=".presentation.Aplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_wimm"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_wimm_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WhereIsMyMap">
+        <activity android:name=".presentation.MapsListActivity"></activity>
+        <activity
+            android:name=".presentation.EditMapActivity"
+            android:theme="@style/Theme.WhereIsMyMap.NoActionBar" />
         <activity
             android:name=".presentation.NewMapActivity"
             android:label="@string/title_activity_new_map"
-            android:theme="@style/Theme.WhereIsMyMap.NoActionBar"></activity>
+            android:theme="@style/Theme.WhereIsMyMap.NoActionBar" />
         <activity android:name=".presentation.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,17 +34,14 @@
             android:authorities="com.pgsanchez.whereismymap.fileProvider"
             android:exported="false"
             android:grantUriPermissions="true">
-            <meta-data  android:name="android.support.FILE_PROVIDER_PATHS"
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-
     </application>
-
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
 </manifest>
